-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 14, 15
-
Component/s: hotspot
-
b16
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8258900 | 11.0.11 | Roland Westrelin | P3 | Resolved | Fixed | b01 |
This is a clone of JDK-8238384.
- backported by
-
JDK-8258900 [REDO] 8238384 CTW: C2 compilation fails with "assert(store != load->find_exact_control(load->in(0))) failed: dependence cycle found"
-
- Resolved
-
- clones
-
JDK-8238384 CTW: C2 compilation fails with "assert(store != load->find_exact_control(load->in(0))) failed: dependence cycle found"
-
- Closed
-
- relates to
-
JDK-8240794 [BACKOUT] 8238384 CTW: C2 compilation fails with "assert(store != load->find_exact_control(load->in(0))) failed: dependence cycle found"
-
- Resolved
-
-
JDK-8252292 8240795 may cause anti-dependence to be missed
-
- Closed
-